@@ -30,6 +30,7 @@ Other features
  * Collection listings are now ordered by name (Seb Brown)
  * Added ``file_hash`` field to documents (Karl Hobley, Dan Braghis)
  * Added last login to the user overview (Noah B Johnson)
+ * Changed design of image editing page (Janneke Janssen, Ben Enright)
 
 Bug fixes
 ~~~~~~~~~
