@@ -1,0 +1,7 @@
+.u-text-transform-uppercase {
+    text-transform: uppercase;
+}
+
+.u-text-weight-normal {
+    font-weight: normal;
+}
